[package]
name = "ikea-shelf-light-animator"
version = "0.1.0"
authors = ["Markus Schmidl <markus.schmidl@mailbox.tu-dresden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.1"

[dependencies.gdk]
version = "0.12.1"
